# guardian

./: Cargo.toml  Dockerfile  Fabrica.py  IA GUARDIAN.docx  README.md  docker-compose.yml
models/: brain_av.onnx  brain_av.onnx.data  brain_dlp.onnx  brain_dlp.onnx.data  brain_honeypot.onnx  brain_honeypot.onnx.data  brain_ids.onnx  brain_ids.onnx.data  brain_log.onnx  brain_log.onnx.data  brain_waf.onnx  brain_waf.onnx.data
src/: ai_engine.rs  main.rs
